# templates

./: .gitignore  README.md  build.gradle  settings.gradle
.github/workflows/: main.yml
src/main/java/org/codefreak/templates/: TaskTemplate.java
src/test/java/org/codefreak/templates/: TaskTemplateTest.java
templates/c-plus-plus/: codefreak.yml
templates/c-plus-plus/src/: Calculator.h
templates/c-plus-plus/test/: CMakeLists.txt
templates/cpp/: .codeclimate.yml  CMakeLists.txt  codefreak.yml
templates/cpp/include/: AddFunction.hpp
templates/cpp/src/: AddFunction.cpp  CMakeLists.txt  Calculator.cpp  Calculator.h  main.cpp
templates/cpp/test/: CalculatorTest.cpp  main.cpp
templates/cpp/tests/: test.cpp
templates/csharp/: AddFunction.sln  codefreak.yml
templates/csharp/src/AddFunction/: AddFunction.cs
templates/csharp/tests/AddFunction.Tests/: AddFunction.Tests.csproj  AddFunctionTest.cs
templates/java/: README.md  build.gradle  codefreak.yml  settings.gradle
templates/java/config/checkstyle/: checkstyle.xml
templates/java/src/main/java/: Calculator.java  Main.java
templates/java/src/test/java/: CalculatorTest.java
templates/javascript/: .eslintrc.js  codefreak.yml  jest.config.js  package-lock.json  package.json
templates/javascript/src/: index.js
templates/javascript/src/__tests__/: index_test.js
templates/python/: codefreak.yml  main.py  main_test.py
